fixed exec board spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -7414,3 +7414,7 @@ form .row:first-child .floating-label-form-group {
 
 .btn-social {
   margin-bottom: 0.5rem; }
+
+.text_blk {
+  color: black
+}
